--- a/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/risk-details/risk-details.component.html
@@ -16,15 +16,15 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th>Risk ID</th>
-        <th>Description</th>
-        <th>Cover period</th>
-        <th>Subclass</th>
-        <th>Cover type</th>
-        <th>Sum insured</th>
-        <th>Premium</th>
-        <th>Insured</th>
-        <th>Commission</th>
+        <th>{{'mngt_wrkflw.policyDetails.riskID' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.description' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.coverPeriod' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.subclass' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.coverType' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.sumInsured' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.premium' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.insured' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.commission' | translate | titlecase }}</th>
         <th></th>
       </tr>
     </ng-template>
@@ -78,14 +78,14 @@
 
     <ng-template pTemplate="header">
       <tr>
-        <th>Description</th>
-        <th>Limit</th>
-        <th>Premium</th>
-        <th>Rate type</th>
-        <th>Section rate</th>
-        <th>Free limit</th>
-        <th>Rate Div Fac</th>
-        <th>Multiplier</th>
+        <th>{{'mngt_wrkflw.policyDetails.description' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.limit' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.premium' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.rateType' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.sectionRate' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.freeLimit' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.rateDivFac' | translate | titlecase }}</th>
+        <th>{{'mngt_wrkflw.policyDetails.multiplier' | translate | titlecase }}</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-risk>
