--- a/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.html
@@ -1,10 +1,10 @@
 <table class="table table-borderless mt-3">
   <thead>
   <tr class="top-row">
-    <td>Description</td>
-    <td>Rate</td>
-    <td class="text-center">Rate Type</td>
-    <td class="currency">Amount</td>
+    <td>{{'mngt_wrkflw.policyDetails.description' | translate | titlecase }}</td>
+    <td>{{'mngt_wrkflw.policyDetails.rate' | translate | titlecase }}</td>
+    <td class="text-center">{{'mngt_wrkflw.policyDetails.rateType' | translate | titlecase }}</td>
+    <td class="currency">{{'entities.amount' | translate | titlecase }}</td>
   </tr>
   </thead>
   <tbody>
