--- a/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
+++ b/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
@@ -21,7 +21,7 @@
   <div class="card">
     <div class="row mt-3 mb-2 p-2">
       <div class="col-12">
-        <label class="text-primary">Documents Dispatch</label>
+        <label class="text-primary">{{'mngt_wrkflw.tickets.documentsDispatch' | translate }}</label>
       </div>
       <div class="row col-sm-12 col-md-6">
         <div class="col-sm-12 col-md-6">
@@ -44,7 +44,7 @@
 
       <div class="col-sm-12 col-md-6 d-flex justify-content-end">
         <button
-          class="btn btn-primary" style="font-size: 12px;" (click)="openDocConfirmModal()">Dispatch documents
+          class="btn btn-primary" style="font-size: 12px;" (click)="openDocConfirmModal()">{{'mngt_wrkflw.tickets.dispatchDocuments' | translate }}
 
         </button>
 
@@ -77,12 +77,12 @@
           <th>
             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
           </th>
-          <th>Client name</th>
-          <th>Policy no.</th>
-          <th>Date created</th>
-          <th>Transaction type</th>
-          <th>Endorsement number</th>
-          <th>Documents</th>
+          <th>{{'mngt_wrkflw.tickets.clientName' | translate }}</th>
+          <th>{{'mngt_wrkflw.tickets.policyNo' | translate }}.</th>
+          <th>{{'mngt_wrkflw.tickets.dateCreated' | translate }}</th>
+          <th>{{'mngt_wrkflw.tickets.transactionType' | translate }}</th>
+          <th>{{'mngt_wrkflw.tickets.endorsementNumber' | translate }}</th>
+          <th>{{'mngt_wrkflw.tickets.documents' | translate }}</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-doc>
