--- a/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
+++ b/src/app/features/crm/components/service-provider-types/service-provider-types.component.html
@@ -116,7 +116,9 @@
     <div class="row">
       <div class="card col-md-12 col-lg-12 col-xxl-12 mb-3">
         <div class="card-header bg-transparent float-start">
-          <span class="float-start mt-3">Service Provider Type Activities</span>
+          <span class="float-start mt-3">{{
+            "crm.service_provider_type_activity" | translate
+          }}</span>
         </div>
         <div class="card-body">
           <div class="row mb-3">
@@ -156,39 +158,46 @@
           <div class="row mb-5">
             <div class="col-sm-12 col-12">
               <p-table
-                #channelTable
+                #serviceProviderTypeActivityTable
                 [value]="serviceProviderActivitiesData"
                 styleClass="p-datatable-sm"
                 responsiveLayout="scroll"
                 [scrollable]="true"
                 scrollHeight="400px"
                 class="ui-datatable"
-                [globalFilterFields]="['channelName', 'channelDesc']"
+                [globalFilterFields]="['description']"
               >
                 <ng-template pTemplate="header">
                   <tr>
-                    <th class="head" pSortableColumn="name">
-                      Activity ID<p-sortIcon field="name"></p-sortIcon>
+                    <th class="head" pSortableColumn="shortDescription">
+                      {{ "crm.short_description" | translate
+                      }}<p-sortIcon field="shortDescription"></p-sortIcon>
                     </th>
-                    <th class="head" pSortableColumn="name">
-                      Activity<p-sortIcon field="name"></p-sortIcon>
+                    <th class="head" pSortableColumn="description">
+                      {{ "crm.activity" | translate
+                      }}<p-sortIcon field="description"></p-sortIcon>
                     </th>
                   </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-provider>
                   <tr
                     class="custom-table"
-                    (click)="onServiceProviderTypeRowSelect(provider)"
-                    [class.selected]="selectedServiceProviderType === provider"
+                    (click)="onServiceProviderTypeActivityRowSelect(provider)"
+                    [class.selected]="
+                      selectedServiceProviderTypeActivity === provider
+                    "
                   >
-                    <td class="body">{{ provider.id }}</td>
-                    <td class="body">{{ provider.channelName }}</td>
+                    <td class="body">{{ provider.shortDescription }}</td>
+                    <td class="body">{{ provider.description }}</td>
                   </tr>
                 </ng-template>
                 <ng-template pTemplate="emptymessage">
                   <tr>
                     <td colspan="8">
-                      No Service Provider Type Activities found.
+                      {{
+                        "crm.no_service_provider_type_activity_found"
+                          | translate
+                      }}
                     </td>
                   </tr>
                 </ng-template>
@@ -226,9 +235,9 @@
         <form [formGroup]="createServiceProviderTypeForm">
           <div class="row">
             <div class="col-6 mb-3">
-              <label for="shortDescription" class="form-label"
-                >Short Description</label
-              >
+              <label for="shortDescription" class="form-label">{{
+                "crm.short_description" | translate
+              }}</label>
               <input
                 type="text"
                 class="form-control"
@@ -259,7 +268,9 @@
               </div>
             </div>
             <div class="col-6 mb-3">
-              <label for="name" class="form-label">Name</label>
+              <label for="name" class="form-label">{{
+                "crm.name" | translate
+              }}</label>
               <input
                 type="text"
                 class="form-control"
@@ -287,7 +298,9 @@
               </div>
             </div>
             <div class="col-6 mb-3">
-              <label for="status" class="form-label">Status</label>
+              <label for="status" class="form-label">{{
+                "crm.status" | translate
+              }}</label>
               <select class="form-select" id="status" formControlName="status">
                 <option value="">Select Status</option>
                 <option
@@ -299,165 +312,62 @@
               </select>
             </div>
             <div class="col-6 mb-3">
-              <label for="withHoldingTaxRate" class="form-label"
-                >Withholding Tax Rate</label
-              >
-              <div class="input-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  formControlName="withHoldingTaxRate"
-                  style="width: 70px; height: 42px; border-right: none"
-                  [ngClass]="{
-                    'is-invalid':
-                      f['withHoldingTaxRate']?.invalid &&
-                      (f['withHoldingTaxRate']?.dirty ||
-                        f['withHoldingTaxRate']?.touched)
-                  }"
-                />
-                <div class="input-group-append">
-                  <span
-                    class="d-block"
-                    (click)="
-                      updateRound(
-                        1,
-                        createServiceProviderTypeForm,
-                        'withHoldingTaxRate'
-                      )
-                    "
-                    style="
-                      width: 20px;
-                      height: 20px;
-                      display: inline-block;
-                      text-align: center;
-                      background: none;
-                      border-top: 1px solid #e5e5e7;
-                      border-right: 1px solid #e5e5e7;
-                    "
-                  >
-                    <i
-                      class="fa-solid fa-chevron-up"
-                      style="background-color: white; color: black"
-                    ></i>
-                  </span>
-                  <span
-                    (click)="
-                      updateRound(
-                        -1,
-                        createServiceProviderTypeForm,
-                        'withHoldingTaxRate'
-                      )
-                    "
-                    style="
-                      width: 20px;
-                      height: 22px;
-                      display: inline-block;
-                      text-align: center;
-                      background: none;
-                      border-bottom: 1px solid #e5e5e7;
-                      border-right: 1px solid #e5e5e7;
-                    "
-                  >
-                    <i
-                      class="fa-solid fa-chevron-down"
-                      style="background-color: white; color: black"
-                    ></i>
-                  </span>
-                </div>
-                <div
-                  *ngIf="
+              <label for="withHoldingTaxRate" class="form-label">{{
+                "crm.withholding_tax_rate" | translate
+              }}</label>
+              <input
+                type="number"
+                class="form-control"
+                formControlName="withHoldingTaxRate"
+                [ngClass]="{
+                  'is-invalid':
                     f['withHoldingTaxRate']?.invalid &&
                     (f['withHoldingTaxRate']?.dirty ||
                       f['withHoldingTaxRate']?.touched)
-                  "
-                  class="form-text text-danger"
-                  [ngClass]="{
-                    'is-invalid':
-                      ['submitted'] && f['withHoldingTaxRate']?.errors
-                  }"
-                >
-                  <div *ngIf="f['withHoldingTaxRate']?.errors['required']">
-                    Withholding Tax Rate is required
-                  </div>
+                }"
+              />
+              <div
+                *ngIf="
+                  f['withHoldingTaxRate']?.invalid &&
+                  (f['withHoldingTaxRate']?.dirty ||
+                    f['withHoldingTaxRate']?.touched)
+                "
+                class="form-text text-danger"
+                [ngClass]="{
+                  'is-invalid': ['submitted'] && f['withHoldingTaxRate']?.errors
+                }"
+              >
+                <div *ngIf="f['withHoldingTaxRate']?.errors['required']">
+                  Withholding Tax Rate is required
                 </div>
               </div>
             </div>
             <div class="col-6 mb-3">
-              <label for="vatTaxRate" class="form-label">VAT Rate</label>
-              <div class="input-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  formControlName="vatTaxRate"
-                  style="width: 70px; height: 42px; border-right: none"
-                  [ngClass]="{
-                    'is-invalid':
-                      f['vatTaxRate']?.invalid &&
-                      (f['vatTaxRate']?.dirty || f['vatTaxRate']?.touched)
-                  }"
-                />
-                <div class="input-group-append">
-                  <span
-                    class="d-block"
-                    (click)="
-                      updateRound(
-                        1,
-                        createServiceProviderTypeForm,
-                        'vatTaxRate'
-                      )
-                    "
-                    style="
-                      width: 20px;
-                      height: 20px;
-                      display: inline-block;
-                      text-align: center;
-                      background: none;
-                      border-top: 1px solid #e5e5e7;
-                      border-right: 1px solid #e5e5e7;
-                    "
-                  >
-                    <i
-                      class="fa-solid fa-chevron-up"
-                      style="background-color: white; color: black"
-                    ></i>
-                  </span>
-                  <span
-                    (click)="
-                      updateRound(
-                        -1,
-                        createServiceProviderTypeForm,
-                        'vatTaxRate'
-                      )
-                    "
-                    style="
-                      width: 20px;
-                      height: 22px;
-                      display: inline-block;
-                      text-align: center;
-                      background: none;
-                      border-bottom: 1px solid #e5e5e7;
-                      border-right: 1px solid #e5e5e7;
-                    "
-                  >
-                    <i
-                      class="fa-solid fa-chevron-down"
-                      style="background-color: white; color: black"
-                    ></i>
-                  </span>
-                </div>
-                <div
-                  *ngIf="
+              <label for="vatTaxRate" class="form-label">{{
+                "crm.vat_rate" | translate
+              }}</label>
+              <input
+                type="number"
+                class="form-control"
+                formControlName="vatTaxRate"
+                [ngClass]="{
+                  'is-invalid':
                     f['vatTaxRate']?.invalid &&
                     (f['vatTaxRate']?.dirty || f['vatTaxRate']?.touched)
-                  "
-                  class="form-text text-danger"
-                  [ngClass]="{
-                    'is-invalid': ['submitted'] && f['vatTaxRate']?.errors
-                  }"
-                >
-                  <div *ngIf="f['vatTaxRate']?.errors['required']">
-                    VAT Rate is required
-                  </div>
+                }"
+              />
+              <div
+                *ngIf="
+                  f['vatTaxRate']?.invalid &&
+                  (f['vatTaxRate']?.dirty || f['vatTaxRate']?.touched)
+                "
+                class="form-text text-danger"
+                [ngClass]="{
+                  'is-invalid': ['submitted'] && f['vatTaxRate']?.errors
+                }"
+              >
+                <div *ngIf="f['vatTaxRate']?.errors['required']">
+                  VAT Rate is required
                 </div>
               </div>
             </div>
@@ -500,37 +410,43 @@
       <div class="modal-body">
         <form [formGroup]="createServiceProviderTypeActivityForm">
           <div class="row">
-            <div class="col-sm-6 mb-3">
-              <label for="activityId" class="form-label">Activity ID</label>
+            <div class="col-6 mb-3">
+              <label for="shortDescription" class="form-label">{{
+                "crm.short_description" | translate
+              }}</label>
               <input
                 type="text"
                 class="form-control"
-                id="activityId"
-                placeholder="Activity ID"
-                formControlName="activityId"
+                id="shortDescription"
+                placeholder="Short Description"
+                formControlName="shortDescription"
                 [ngClass]="{
                   'is-invalid':
-                    f['activityId']?.invalid &&
-                    (f['activityId']?.dirty || f['activityId']?.touched)
+                    g['shortDescription']?.invalid &&
+                    (g['shortDescription']?.dirty ||
+                      g['shortDescription']?.touched)
                 }"
               />
               <div
                 *ngIf="
-                  f['activityId']?.invalid &&
-                  (f['activityId']?.dirty || f['activityId']?.touched)
+                  g['shortDescription']?.invalid &&
+                  (g['shortDescription']?.dirty ||
+                    g['shortDescription']?.touched)
                 "
                 class="form-text text-danger"
                 [ngClass]="{
-                  'is-invalid': ['submitted'] && f['activityId']?.errors
+                  'is-invalid': ['submitted'] && g['shortDescription']?.errors
                 }"
               >
-                <div *ngIf="f['activityId']?.errors['required']">
-                  Activity ID is required
+                <div *ngIf="g['shortDescription']?.errors['required']">
+                  Short Description is required
                 </div>
               </div>
             </div>
             <div class="col-sm-6 mb-3">
-              <label for="activity" class="form-label">Activity</label>
+              <label for="activity" class="form-label">{{
+                "crm.activity" | translate
+              }}</label>
               <input
                 type="text"
                 class="form-control"
@@ -539,21 +455,21 @@
                 formControlName="activity"
                 [ngClass]="{
                   'is-invalid':
-                    f['activity']?.invalid &&
-                    (f['activity']?.dirty || f['activity']?.touched)
+                    g['activity']?.invalid &&
+                    (g['activity']?.dirty || g['activity']?.touched)
                 }"
               />
               <div
                 *ngIf="
-                  f['activity']?.invalid &&
-                  (f['activity']?.dirty || f['activity']?.touched)
+                  g['activity']?.invalid &&
+                  (g['activity']?.dirty || g['activity']?.touched)
                 "
                 class="form-text text-danger"
                 [ngClass]="{
-                  'is-invalid': ['submitted'] && f['activity']?.errors
+                  'is-invalid': ['submitted'] && g['activity']?.errors
                 }"
               >
-                <div *ngIf="f['activity']?.errors['required']">
+                <div *ngIf="g['activity']?.errors['required']">
                   Activity is required
                 </div>
               </div>
@@ -580,4 +496,14 @@
   [message]="'Are you sure you want to delete this service provider type?'"
   (confirmed)="confirmServiceProviderTypeDelete()"
   #serviceProviderTypeConfirmationModal
+></app-reusable-input>
+
+<app-reusable-input
+  [modalId]="'serviceProviderTypeActivityConfirmationModal'"
+  [title]="'Delete Confirmation'"
+  [message]="
+    'Are you sure you want to delete this service provider type activity?'
+  "
+  (confirmed)="confirmServiceProviderTypeActivityDelete()"
+  #serviceProviderTypeActivityConfirmationModal
 ></app-reusable-input>
